get_filename_component(FOLDER_NAME ${CMAKE_CURRENT_SOURCE_DIR} NAME)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin/${FOLDER_NAME})

add_executable(test test.cpp)
add_executable(firstwindow firstwindow.cpp)
add_executable(hello_triangles hello_triangles.cpp)
add_executable(hello_triangles_indes hello_triangles_index.cpp)
add_executable(shader_uniform shaders_uniform.cpp)
add_executable(texture textures.cpp)
add_executable(conversion conversion.cpp ../shader.cpp)
add_executable(coordinate_system coordinate_system.cpp ../shader.cpp)
add_executable(camera_circle camera_circle.cpp ../shader.cpp)