get_filename_component(FOLDER_NAME ${CMAKE_CURRENT_SOURCE_DIR} NAME)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin/${FOLDER_NAME})
add_executable(depth_testing depth_testing.cpp)
add_executable(depth_testing_view depth_testing_view.cpp)
add_executable(stencil_testing stencil_testing.cpp)
add_executable(blending_discard blending_discard.cpp)
add_executable(blending_sorted blending_sorted.cpp)
