get_filename_component(FOLDER_NAME ${CMAKE_CURRENT_SOURCE_DIR} NAME)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin/${FOLDER_NAME})
link_libraries(assimp)
add_executable(depth_testing depth_testing.cpp)
add_executable(depth_testing_view depth_testing_view.cpp)
add_executable(stencil_testing stencil_testing.cpp)
add_executable(blending_discard blending_discard.cpp)
add_executable(blending_sorted blending_sorted.cpp)
add_executable(faceculling faceculling.cpp)
add_executable(framebuffer framebuffer.cpp)
add_executable(cubemaps cubemaps.cpp)
add_executable(advanced_glsl advanced_glsl.cpp)
add_executable(geometry_shader_houses geometry_shader_houses.cpp)
add_executable(geometry_shader_exploding geometry_shader_exploding.cpp)