get_filename_component(FOLDER_NAME ${CMAKE_CURRENT_SOURCE_DIR} NAME)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin/${FOLDER_NAME})
link_libraries(assimp)
add_executable(advanced_lighting advanced_lighting.cpp)
add_executable(gamma_correction gamma_correction.cpp)
target_link_libraries(gamma_correction imgui)
add_executable(shadow_mapping_depth shadow_mapping_depth.cpp)
add_executable(shadow_mapping_base shadow_mapping_base.cpp)
add_executable(point_shadow point_shadow.cpp)
add_executable(normal_mapping normal_mapping.cpp)
add_executable(parallax_mapping parallax_mapping.cpp)
add_executable(hdr hdr.cpp)